--- a/static/style/sponsors.css
+++ b/static/style/sponsors.css
@@ -23,7 +23,7 @@
 
 .sponsor-details .url a {
   font-weight: normal;
-  font-size: normal;
+  font-size: medium;
 }
 
 .sponsor-details .email {
@@ -34,7 +34,7 @@
 
 .sponsor-details .email a {
   font-weight: normal;
-  font-size: normal;
+  font-size: medium;
 }
 
 .sponsor-details .description p{
